# gs-cookiecutter

./: cookiecutter.json
docs/: prompt_arguments.md
docs/features/: cicd.md
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  on-release-main.yml
{{cookiecutter.project_name}}/notebooks/: foo.ipynb
